<resources>
    <string name="app_name" translatable="false">Zirh Analizator</string>
    <string name="optimize" translatable="false">OPTIMIZE</string>
    <string name="cleaner" translatable="false">Tozalash</string>
    <string name="antivirus" translatable="false">Analizator</string>
    <string name="battery" translatable="false">Quvvat</string>
    <string name="data" translatable="false">Ma\'lumot</string>
    <string name="security" translatable="false">Xavfsizlik</string>
    <string name="files" translatable="false">Fayllar</string>
    <string name="quick_scan" translatable="false">QUICK SCAN</string>
    <string name="full_scan" translatable="false">Full Scan</string>
    <string name="update" translatable="false">Yangilanish</string>
    <string name="settings">Sozlamalar</string>
    <string name="optimize1" translatable="false">Fayl tanlash</string>
    <string name="back" translatable="false">Back</string>
    <string name="accessibility_service_description" translatable="false">Tashqi manbadan ilova o`rnatishni bloklash uchun xizmat</string>
    <string name="optimize_text" translatable="false">Optimallashtirish\ntaklif etiladi</string>
    <string name="check" translatable="false">Tekshirish</string>
    <string name="ai_scan" translatable="false">AI Tekshirish</string>
    <string name="checking" translatable="false">Tekshirilmoqda</string>
    <string name="device_virus_programm" translatable="false">Qurulmadagi zararli dasturlar</string>
    <string name="device_update" translatable="false">Dastur yangilanishi</string>
    <string name="phone_safe" translatable="false">Telefoningiz xavfsiz holatda</string>
    <string name="phone_unsafe" translatable="false">Qurulmada zararli dasturlar mavjud</string>
    <string name="scannery" translatable="false">skanerlandi</string>
    <string name="big_files" translatable="false">Katta hajmli fayllar</string>
    <string name="audio_and_video" translatable="false">Audio &amp; video</string>
    <string name="apps_delete" translatable="false">Ilovalarni o\'chirish</string>
    <string name="cash_memory" translatable="false">Kesh xotira</string>
    <string name="unsafe_apps" translatable="false">Xavli ilovalar</string>
    <string name="safe_apps" translatable="false">Xavfsiz ilovalar</string>
    <string name="allowed_permissions" translatable="false">Berilgan ruxsatlar</string>
    <string name="denied_permissions" translatable="false">Berilmagan ruxsatlar</string>
    <string name="select_file">Fayl tanlash</string>
    <string name="app_info">Ilova ma\'lumotlari</string>
    <string name="app_icon">Ilova belgisi</string>
    <string name="package_name">Paket nomi</string>
    <string name="version">Versiya</string>
    <string name="version_x">Versiya %1$s</string>
    <string name="language">Til</string>
    <string name="lang_uzbek">Uzbek</string>
    <string name="lang_russian">Русский</string>
    <string name="lang_english">English</string>
    <string name="active_apps" translatable="false">Foal ilovalar</string>
    <string name="noactive_apps">Ishlatilmagan ilovalar</string>
    <string name="update_time">Yuklanish vaqti</string>
    <string name="cpu">CPU</string>
    <string name="b_files">Katta fayllar</string>
    <string name="s_files" translatable="false">Shubhali fayllar</string>
    <string name="y_files" translatable="false">Yashirin fayllar</string>
    <string name="aniqlangan_zararli_fayllar">Aniqlangan zararli fayllar</string>
    <string name="virus_detected_title" translatable="false">Virus aniqladi.</string>
    <string name="virus_detected_path">"Joylashuvi: "</string>
    <string name="virus_detected_message">Virus aniqlandi</string>
    <string name="virus_alerts" translatable="false">Virus</string>
    <string name="virus_notification_description" translatable="false">Virus</string>
    <string name="virus_file">"Virus fayl: "</string>
    <string name="virus_path">"Joylashuvi: "</string>
    <string name="error">Xatolik yuz berdi</string>
    <string name="file_not_found">Fayl topilmadi.</string>
    <string name="delete_failed">Fayl o\'chirilmoqda</string>
    <string name="suspicious_app_message">Suspicious app message</string>
    <string name="certificate_analysis_error" translatable="false">Certificate analysis Error</string>
    <string name="no_certificate_info">no_certificate info</string>
    <string name="file_deleted_title">Faylni o\'chirish</string>
    <string name="delete_failed_title">Faylni o\'chirishda xatolik yuz berdi</string>
    <string name="file_deleted_message">Bu fayl virus fayl uni o\'chiring</string>
    <string name="delete_failed_message">Faylni o\'chirishda xatolik yuz berdi\n</string>
    <string name="antivirus_text1" translatable="false">Antivirus kuzatuv rejimida</string>
    <string name="tez_kunda" translatable="false">Tez kunda</string>
    <string name="tez_kunda1" translatable="false">AI skan tez orada qo\'shiladi.</string>
    <string name="large" translatable="false">100MB+ bo\'lgan fayllar topilmadi</string>
    <string name="suspicious" translatable="false">Shubhali fayllar topilmadi</string>
    <string name="hidden" translatable="false">Yashirin fayllar topilmadi</string>
    <string name="default1" translatable="false">Fayllar topilmadi</string>
    <string name="loading" translatable="false">Yuklanmoqda...</string>
    <string name="malcuse_files_not_found" translatable="false">Zararli fayllar topilmadi</string>
    <string name="malicious_files_detected" translatable="false">Aniqlangan zararli fayllar</string>
    <string name="click_files" translatable="false">Faylni tekshirish uchun ustiga bosing</string>
    <string name="checking_file" translatable="false">Checking file: </string>
    <string name="sus_file" translatable="false">Shubhali fayl: </string>
    <string name="reason" translatable="false">Sababi: </string>
    <string name="safe_file" translatable="false">Fayl xavfsiz</string>
    <string name="file_scanning" translatable="false">Fayllar skanerlanyapti...</string>

</resources>